--- a/style.css
+++ b/style.css
@@ -14,19 +14,46 @@
   }
 }
 /* flexbox */
-.container { /* automatically puts things onto more rows when screen is narrower */
+.gallery-container { /* automatically puts things onto more rows when screen is narrower */
   display: flex;
   flex-wrap: wrap;
 }
 
-.gallery-image {
+.gallery-div {
   margin: 20px;
 }
 
-.gallery-image-img {
+.gallery-image {
   object-fit: cover;
   width: 400px;
   height: 400px;
+}
+
+.gallery-image:hover {
+  opacity: 0.3;
+}
+
+.image-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 18px;
+}
+
+.poster-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.poster-div {
+  margin: 20px;
+}
+
+.poster-image {
+  object-fit: contain;
+  width: 400px;
+  height: 700px;
 }
 
 /* grid */
@@ -108,6 +135,11 @@ h2 {
   color: rgb(22, 145, 22);
   margin-left: 20px;
   margin-top: 40px;
+}
+
+.subheading {
+  text-align: center;
+  font-size: 30px;
 }
 
 h3 {
@@ -248,7 +280,7 @@ td, th {
 
 .big-cookie {
   transition: border-radius .5s;
-  width: 260px;
+  max-width: 250px;
   margin-left: 40px;
 }
 
